2003-12-03 Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* Expression.cs : XPathSorters.Compare() should compare document
	  position. See last sentence of XSLT 1.0 secion 10.

2003-12-03 Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* DefaultContext.cs : Overrode all functions' ToString().
	  XPathFunctions.ToNumber() trims whitespaces at both side.
	  Fixed NullReferenceException in normalize-space().
	* Iterator.cs : Fixed AncestorOrSelfIterator.MoveNext() didn't handle
	  attribute or namespace node correctly.
	  SlashIterator.Clone() didn't clone "next node iterator" correctly.
	  EnumeratorIterator.ctor() should raise an error (not at Clone())
	  when the target IEnumerator is not ICloneable.

2003-11-28  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* Expression.cs : namespace axis now traversed in reverse order, so it
	  requires sorting.
	* Iterator.cs : UnionIterator.Clone() was incomplete. 
	  NamespaceItarator() should be reverse order (special handling
	  because of XPathNavigator specification).

2003-11-24  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* Iterator.cs : PrecedingIterator.MoveNext() now breaks up at Root.
	* XPathNavigator.cs : ComparePosition() didn't handle attributes 
	  correctly.

2003-11-24  Atsushi Enomoto  <ginga@kit.hi-ho.ne.jp>

	* Parser.jay, Expression.cs, Iterator.cs :
	  Added ExprParens and ParensIterator classes which is used to handle
	  precedence of parenthesized expressions.
	  (e.g. consider "(preceding::*)[3]" and "preceding::[3]" )

	* Expression.cs, Iterator.cs :
	  Added RequireSorting property for each Expr and BaseIterator classes.
	  SlashIterator.MoveNext() now considers correct sorting. But
	  considering performance, it separates two logics, sorted and sortless
	  depending on RequireSorting of left iterator and right expression.

	* Iterator.cs :
	  SimpleIterator.ctor() should consider when nav is null.
	  FollowingIterator.MoveNext() and PrecedingIterator.MoveNext() should
	  not return any nodes.